--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
-    "dotenv": "^16.4.7",
-    "mongoose": "^8.9.1"
+    "dotenv": "^16.4.7"
   },
   "devDependencies": {
     "@types/react": "^19.0.1",
