--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
-    "dotenv": "^16.4.7"
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "lint": "^0.8.19",
+    "mongoose": "^8.9.2"
   },
   "devDependencies": {
     "@types/react": "^19.0.1",
