--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,10 @@
     "dotenv": "^16.4.7",
     "env": "^0.0.2",
     "express": "^4.21.2",
-    "mongoose": "^8.9.2"
+    "moment": "^2.30.1",
+    "mongoose": "^8.9.2",
+    "node-fetch": "^3.3.2",
+    "query-string": "^9.1.1"
   },
   "devDependencies": {
     "tsx": "^4.19.2"
