--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "express": "^4.21.2",
     "moment": "^2.30.1",
     "mongoose": "^8.9.2",
+    "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.2",
     "query-string": "^9.1.1"
   },
