--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,8 @@
     "mongoose": "^8.9.2",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.2",
-    "query-string": "^9.1.1"
+    "query-string": "^9.1.1",
+    "redis": "^4.7.0"
   },
   "devDependencies": {
     "tsx": "^4.19.2"
