--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
+    "@tanstack/react-query": "^5.90.11",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "lint": "^0.8.19",
