--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth0/nextjs-auth0": "^2.4.0",
     "@lottiefiles/dotlottie-react": "^0.12.1",
+    "@tanstack/react-query": "^5.90.11",
     "dotenv": "^16.4.7",
     "framer-motion": "^12.23.22",
     "fs": "^0.0.1-security",
