--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,13 +1,10 @@
-name: Docker Image CI
+name: Deploy to Cloud Run
 
 on:
   push:
     branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
 
 jobs:
-
   deploy:
     runs-on: ubuntu-latest
 
@@ -15,31 +12,35 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Google Cloud
+      - name: Authenticate to Google Cloud
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
+
+      - name: Set up gcloud
         uses: google-github-actions/setup-gcloud@v2
         with:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
-          service_account_key: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
-          export_default_credentials: true
+
       - name: Generate timestamp tag
-        id: vars
+        id: image
         run: echo "TAG=$(date +%Y%m%d-%H%M%S)" >> $GITHUB_OUTPUT
+
+      - name: Debug image name
+        run: echo "Image:${{ secrets.ARTIFACT_URL }}:${{ steps.image.outputs.TAG }}"
 
       - name: Build and Push Image
         run: |
           gcloud builds submit \
-          --tag "${{ secrets.ARTIFACT_URL }}:${{ steps.vars.outputs.TAG }}"
+            --tag "${{ secrets.ARTIFACT_URL }}:${{ steps.image.outputs.TAG }}"
 
       - name: Deploy to Cloud Run
         run: |
-          gcloud run deploy "${{ vars.CLOUDRUN_SERVICE_NAME }}" \
-          --image "${{ secrets.ARTIFACT_URL }}:${{ steps.vars.outputs.TAG }}" \
-          --region "${{ secrets.GCP_REGION }}" \
-          --project "${{ secrets.GCP_PROJECT_ID }}" \
-          --allow-unauthenticated
+          gcloud run deploy "${{ secrets.CLOUDRUN_SERVICE_NAME }}" \
+            --image "${{ secrets.ARTIFACT_URL }}:${{ steps.image.outputs.TAG }}" \
+            --region "${{ secrets.GCP_REGION }}" \
+            --project "${{ secrets.GCP_PROJECT_ID }}" \
+            --allow-unauthenticated
 
       - name: Output version deployed
-        run: echo "Deployed version:${{ steps.vars.outputs.TAG }}"
-
-      
-      
+        run: echo "Deployed version:${{ steps.image.outputs.TAG }}"
