--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -35,6 +35,13 @@ jobs:
           gcloud builds submit . \
             --tag "${{ secrets.ARTIFACT_URL }}:${{ steps.image.outputs.TAG }}"
 
+      - name: Debug env values
+        run: |
+          echo "PROJECT: '${{ secrets.GCP_PROJECT_ID }}'"
+          echo "REGION: '${{ secrets.GCP_REGION }}'"
+          echo "SERVICE: '${{ secrets.CLOUDRUN_SERVICE_NAME }}'"
+          echo "IMAGE: '${{ secrets.ARTIFACT_URL }}:${{ steps.image.outputs.TAG }}'"
+
       - name: Deploy to Cloud Run
         run: |
           gcloud run deploy "${{ secrets.CLOUDRUN_SERVICE_NAME }}" \
