--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@lottiefiles/dotlottie-react": "^0.12.1",
     "@tanstack/react-query": "^5.90.11",
     "dotenv": "^16.4.7",
+    "driver.js": "^1.4.0",
     "framer-motion": "^12.23.22",
     "fs": "^0.0.1-security",
     "mongoose": "^8.9.1",
