--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react": "^19.0.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^19.0.0",
+    "react-intersection-observer": "^10.0.2",
     "react-lottie-player": "^2.1.0",
     "zustand": "^5.0.9"
   },
