--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
     "target": "ES2017",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -11,7 +15,7 @@
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "incremental": true,
     "plugins": [
       {
@@ -20,15 +24,30 @@
     ],
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"],
-      "@/libs/*": ["../backend/libs/*"],
-      "@/models/*": ["../backend/models/*"],
-      "@/components/*": ["app/components/*"],
-      "@/clothes/*": ["app/clothes/*"],
-      "@/profile/*": ["app/profile/*"],
-      "@/settings/*": ["app/settings/*"],
-
-      "@/app/*": ["app/*"]
+      "@/*": [
+        "./*"
+      ],
+      "@/libs/*": [
+        "../backend/libs/*"
+      ],
+      "@/models/*": [
+        "../backend/models/*"
+      ],
+      "@/components/*": [
+        "app/components/*"
+      ],
+      "@/clothes/*": [
+        "app/clothes/*"
+      ],
+      "@/profile/*": [
+        "app/profile/*"
+      ],
+      "@/settings/*": [
+        "app/settings/*"
+      ],
+      "@/app/*": [
+        "app/*"
+      ]
     }
   },
   "include": [
@@ -41,7 +60,10 @@
     "../backend/routes/get.ts",
     "../backend/routes/create.ts",
     "../backend/routes/upload.ts",
-    "../backend/routes/listClothes.ts"
+    "../backend/routes/listClothes.ts",
+    ".next/dev/types/**/*.ts"
   ],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules"
+  ]
 }
