--- a/backend/package.json
+++ b/backend/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "App.js",
   "scripts": {
-    "start": "node App.js",
-    "dev": "nodemon App.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "NODE_ENV=test dotenv -e .env.test mocha test/appTest.js"
   },
   "keywords": [],
   "author": "Manveer Sohal",
@@ -26,7 +26,11 @@
     "redis": "^4.7.1"
   },
   "devDependencies": {
+    "chai": "^6.2.2",
+    "mocha": "^11.7.5",
+    "mongodb-memory-server": "^11.0.1",
     "nodemon": "^3.1.10",
+    "supertest": "^7.2.2",
     "tsx": "^4.19.2"
   }
 }
