--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "chai": "^6.2.2",
+    "dotenv-cli": "^11.0.0",
     "mocha": "^11.7.5",
     "mongodb-memory-server": "^11.0.1",
     "nodemon": "^3.1.10",
